# Pro-Trader-PLUGIN

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  COOPERCORP.md  Dockerfile  Makefile  PLAN.md  README.md  RECOVERY_PLAN.md  SKILL.md  WATCHLIST.md  main.py  nvda_tracker.py  pyproject.toml  requirements.txt  scan_run.py  setup.sh
.claude/skills/Pro-Trader-PLUGIN/: SKILL.md
.claude/skills/Pro-Trader-SKILL/: SKILL.md
.github/workflows/: test.yml
config/: discord.md  strategy.json
dashboard/: index.html  manifest.json  server.py  sw.js
data/: top_traders.json
docs/: ARCHITECTURE.md
logs/: LESSONS.md  circuit_breaker.json  drawdown_state.json  futures_state.json  gold_state.json  guru_cache.json  guru_signals.json  kelly_params.json  live_prices.json  member_prefs.json  news_dedup.json  signals.db  situation_memory.json  trading_member_channels.json  whale_cache.json
pro_trader/: __init__.py
pro_trader/cli/: app.py  setup_wizard.py
pro_trader/core/: __init__.py  config.py  events.py  interfaces.py  pipeline.py  registry.py  trader.py
pro_trader/models/: __init__.py  contract.py  market_data.py  position.py  signal.py
pro_trader/plugins/: __init__.py
pro_trader/plugins/analysts/: flash_analyst.py  macro_analyst.py  pulse_analyst.py
pro_trader/plugins/brokers/: alpaca_broker.py  coinbase_broker.py  ibkr_broker.py  schwab_broker.py  snaptrade_broker.py  tastytrade_broker.py  tradier_broker.py
pro_trader/plugins/dashboard/: __init__.py  index.html  server.py
pro_trader/plugins/data/: futures_plugin.py  realtime_plugin.py  yfinance_plugin.py
pro_trader/plugins/monitors/: fomc_monitor_plugin.py  (+2 more)
pro_trader/services/: openclaw.py
scripts/: account_status.py  analyze.py  backtest.py  breaking_news_monitor.py  close_position.py  dark_pool_monitor.py  drawdown_monitor.py  earnings_calendar.py  economic_calendar.py  equity_snapshot.py  etf_flow_tracker.py  fomc_monitor.py  full_pipeline_scan.py  futures_monitor.py  get_market_data.py  gold_monitor.py  guru_tracker.py  market_keepawake.sh  market_keepawake_stop.sh  news_dedup.py  news_trade_trigger.py  performance.py  post_equity_chart.py  process_member_prefs.py  quick_quote.py  reconcile_positions.py  reflect_on_trade.py  repo_rate_monitor.py  rotate_logs.py  run_backtest.py  run_live.py  sentiment_aggregator.py  short_interest.py  signal_accuracy.py  stream_manager.py  threshold_tuner.py  ticker_news_scanner.py  trade_gate.py  verify_signals.py  wake_recovery.py  (+3 more)
tests/: test_broker.py  test_config.py  test_core_modules.py  test_openclaw.py  test_pipeline.py  test_realtime_plugin.py  test_setup_wizard.py
tradingagents/: discord_reporter.py  discord_signal_card.py
tradingagents/backtest/: engine.py
tradingagents/brokers/: __init__.py  alpaca.py
tradingagents/dataflows/: __init__.py  alpaca_stream.py  alpha_vantage_common.py  catalyst_feeds.py  cboe_options.py  earnings_whisper.py  fear_greed.py  finbert_sentiment.py  finnhub_data.py  futures_data.py  gex_analysis.py  google_news.py  institutional_tracker.py  iv_percentile.py  market_context.py  market_watchdog.py  news_aggregator.py  newsapi_data.py  options_chain.py  options_flow.py  polygon_data.py  realtime_quotes.py  reddit_sentiment.py  relative_strength.py  sec_edgar.py  short_interest.py  stocktwits_sentiment.py  tradier_options.py
tradingagents/db/: signal_db.py
tradingagents/execution/: __init__.py  executor.py  vwap_entry.py
tradingagents/filters/: correlation_filter.py  earnings_filter.py
tradingagents/graph/: debate_engine.py  position_calibrator.py  signal_processor.py
tradingagents/learning/: pattern_tracker.py  post_mortem.py  score_adjuster.py  win_rate_tracker.py
tradingagents/memory/: __init__.py  situation_memory.py
tradingagents/performance/: ledger.py
tradingagents/risk/: circuit_breaker.py  kelly_sizing.py  partial_exit.py  portfolio_heat.py  trade_lock.py  trade_tags.py  trailing_stop.py
tradingagents/signals/: __init__.py  signal_logger.py  signal_verifier.py
tradingagents/technical/: __init__.py  candle_builder.py  candle_patterns.py  chart_patterns.py  mtf_analyzer.py
tradingagents/utils/: market_hours.py  strategy_config.py
(+12 files in other folders)
